# ebs-python-internship-test

./: pyproject.toml
apps/blog/: admin.py  models.py  serializers.py  urls.py  views.py
